vue + express integration

--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "books-com-tw-crawler": "^1.1.1",
+    "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
